@@ -17,20 +17,23 @@
    <property name="margin">
     <number>0</number>
    </property>
-   <item row="0" column="0" colspan="6">
+   <item row="0" column="0" colspan="7">
     <widget class="TextBrowser" name="text">
      <property name="openLinks">
       <bool>false</bool>
      </property>
     </widget>
    </item>
-   <item row="1" column="0" colspan="6">
+   <item row="1" column="0" colspan="7">
     <widget class="SqueezedTextLabel" name="songLabel"/>
    </item>
    <item row="2" column="0">
     <widget class="QToolButton" name="refreshBtn"/>
    </item>
    <item row="2" column="1">
+    <widget class="QToolButton" name="searchBtn"/>
+   </item>
+   <item row="2" column="2">
     <spacer name="horizontalSpacer">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -43,16 +46,16 @@
      </property>
     </spacer>
    </item>
-   <item row="2" column="2">
+   <item row="2" column="3">
     <widget class="QToolButton" name="editBtn"/>
    </item>
-   <item row="2" column="3">
+   <item row="2" column="4">
     <widget class="QToolButton" name="saveBtn"/>
    </item>
-   <item row="2" column="4">
+   <item row="2" column="5">
     <widget class="QToolButton" name="cancelBtn"/>
    </item>
-   <item row="2" column="5">
+   <item row="2" column="6">
     <widget class="QToolButton" name="delBtn"/>
    </item>
   </layout>
